# adventofcode2020

./: README.md  pyproject.toml
day1/: problem.py  test_day1.py
day1/problem1/: problem.py  test_day1_problem1.py
day10/: problem.py  test_day10.py
day11/: problem.py  test_day11.py
day12/: problem.py  test_day12.py
day13/: problem.py  test_day13.py
day14/: problem.py  test_day14.py
day15/: problem.py  test_day15.py
day16/: problem.py  test_day16.py
day17/: problem.py  test_day17.py
day18/: problem.py  test_day18.py
day2/: problem.py  test_day2.py
day3/: problem.py  test_day3.py
day4/: problem.py  test_day4.py
day5/: problem.py  test_day5.py
day6/: problem.py  test_day6.py
day7/: problem.py  test_day7.py
day8/: problem.py  test_day8.py
day9/: problem.py  test_day9.py
