[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["Stephen Helms <stephenhelms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
